<resources>
    <string name="app_name">Toolbox</string>
    <string name="hint">                        </string>
    <string name="name">Your Name:</string>
    <string name="science">Science</string>
    <string name="math">Math</string>
    <string name="history">History</string>
    <string name="english">English</string>
    <string name="comp">Computer Science</string>
    <string name="art">Art</string>
    <string name="music">Music</string>
    <string name="subjectQuestion">What subjects do you have homework for?</string>
    <string name="activitiesQuestion">How many activities do you have?</string>
    <string name="hoursQuestion">How much time will it take for?</string>
    <string name="fiveHours">5 hours</string>
    <string name="fourHours">4 hours</string>
    <string name="threeHours">3 hours</string>
    <string name="twoHours">2 hours</string>
    <string name="oneHour">1 hour</string>
    <string name="oneActivity">zero</string>
    <string name="twoActivity">one</string>
    <string name="threeActivity">two</string>
    <string name="fourActivity">three</string>
    <string name="fiveActivity">four</string>
</resources>
